# librencodeplus-cpp

./: .clang-format  CMakeLists.txt  README.md  librencodeplus-constants.hpp  librencodeplus-decode.cpp  librencodeplus-encode.cpp  librencodeplus-utils.cpp  librencodeplus.cpp  librencodeplus.hpp  utils.cpp  utils.hpp
tests/: tests-decode.cpp  tests-encode.cpp
tools/: decode-file.cpp
